--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -107,6 +107,12 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+
 	</dependencies>
   <dependencyManagement>
         <dependencies>
